--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
     <title>Exercise One</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+  </body>
 </html>
