Add id and classes to sections

--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
       <nav></nav>
     </header>
     <main>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section id="box-model" class="box-model-section section"></section>
+      <section id="flex-box" class="flex-box-section section"></section>
+      <section
+        id="positioning-section"
+        class="positioning-section section"
+      ></section>
+      <section id="heading-section" class="heading-section section"></section>
+      <section
+        id="simple-javascript"
+        class="simple-javascript-section section"
+      ></section>
     </main>
   </body>
 </html>
