Start implementing nav

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   </head>
   <body>
     <header>
-      <nav></nav>
+      <nav>
+        <a>Box Model</a>
+        <a>Flexbox</a>
+        <a>Positioning Elements</a>
+        <a>Heading Usage</a>
+        <a>Simple JavaScript</a>
+      </nav>
     </header>
     <main>
       <section id="box-model" class="box-model-section section"></section>
