Adjust horizontal alignment of footer

--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
       </section>
     </main>
     <footer>
-      <p>Student Name - Semester, Year</p>
+      <div class="interior">
+        <p>Student Name - Semester, Year</p>
+      </div>
     </footer>
   </body>
 </html>
